--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,15 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/app_icon_removebg_preview"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/app_icon_removebg_preview"
         android:supportsRtl="true"
         android:theme="@style/Theme.PracticeApp"
         tools:targetApi="31">
+        <activity
+            android:name=".calorieStatus"
+            android:exported="false" />
         <activity
             android:name=".dailytrack"
             android:exported="false" />
